--- a/crop_rotator/strona/templates/strona/family.html
+++ b/crop_rotator/strona/templates/strona/family.html
@@ -81,9 +81,9 @@
                     {% endif %}</p>
                   {% endfor %}
                   <hr />
-                  <h4 class="pt-2">$Znane interakcje</h4>
+                  <h4 class="pt-2">{{ translatables.known_interactions }}</h4>
                   {% if crop_family_from %}
-                  <p><b>$Rodzina rośliny oddziaływuje na inne</b></p>
+                  <p><b>{{ translatables.family_to_other }}:</b></p>
                   {% for interaction in crop_family_from %}
                     <p> {% if family.is_family_slave %}{{ family.family_master.name }} {% else %}{{ family.name }} {% endif %}
                       {% include 'strona/crop_parts/crop_interaction_from.html' %}
@@ -91,7 +91,7 @@
                   {% endfor %}
                   {% endif %}
                   {% if crop_family_to %}
-                  <p><b>$Inne oddziaływują na rodzinę rośliny</b></p>
+                  <p><b>{{ translatables.other_to_family }}:</b></p>
                   {% for interaction in crop_family_to %}
                       {% include 'strona/crop_parts/f_interaction_to.html' %}
                       {% include 'strona/crop_parts/interaction_button.html' %}
