--- a/crop_rotator/strona/templates/strona/step.html
+++ b/crop_rotator/strona/templates/strona/step.html
@@ -26,18 +26,33 @@
              {% csrf_token %}
               <p>{{ translatables.title }}: {{ form.title }}</p>
               <p>{{ translatables.descr }}: {{ form.descr }}</p>
-              <!--Można założyć, że rolnik wie jaki dać nawóz pod jakie rośliny i dać po prostu "dodaj właściwy nawóz" z onhover,
-              że ta opcja poprawia kulturę gleby i sam rolnik ma dociec, który nawóz będzie najlepszy (uproszczenie programu).-->
+              <div class="col-md-12 plan-main">
+                {% for crop in step.early_crop.all %}
+                <p>{{ crop.name }}   <button class="btn btn-link-3 btn-light" remove_key="early" remove_element="{{ crop.id }}" name="remove_element_button">{{ translatables.remove_permanent }}</button></p>
+              {% endfor %}
+              </div>
               <p>{{ translatables.early_crop }}: {{ form.early_crop }}; {{ translatables.add_fertilizer }}: {{ form.add_manure_early }} *{{ translatables.add_fertilizer_onhover }}</p>
               <p>{{ translatables.destroy_early_crop }}: {{ form.is_early_crop_destroy }}</p>
+              <div class="col-md-12 plan-main">
+                {% for crop in step.middle_crop.all %}
+                <p>{{ crop.name }}   <button class="btn btn-link-3 btn-light" remove_key="middle" remove_element="{{ crop.id }}" name="remove_element_button">{{ translatables.remove_permanent }}</button></p>
+              {% endfor %}
+              </div>
               <p>{{ translatables.middle_crop }}: {{ form.middle_crop }}; {{ translatables.add_fertilizer }}: {{ form.add_manure_middle }} *{{ translatables.add_fertilizer_onhover }}</p>
               <p>{{ translatables.destroy_middle_crop }}: {{ form.is_middle_crop_destroy }}</p>
+              <div class="col-md-12 plan-main">
+                {% for crop in step.late_crop.all %}
+                <p>{{ crop.name }}   <button class="btn btn-link-3 btn-light" remove_key="late" remove_element="{{ crop.id }}" name="remove_element_button">{{ translatables.remove_permanent }}</button></p>
+              {% endfor %}
+              </div>
               <p>{{ translatables.late_crop }}: {{ form.late_crop }}; {{ translatables.add_fertilizer }}: {{ form.add_manure_late }} *{{ translatables.add_fertilizer_onhover }}</p>
               <p>{{ translatables.destroy_late_crop }}: {{ form.is_late_crop_destroy }}</p>
               <!--Zrób coś, żeby wykrywał, że user dodał nawóz do obydwu kroków i informował go o ryzyku przenawożenia.
               Coś w stylu "Dodałeś nawóz w obydwu krokach, czy na pewno wiesz co robisz?"
               Tak samo ze zniszczeniem na zielony nawóz i nawożeniem.
               Ogólnie jak zaznaczy dwa dowolne checkboxy "nawożące" to mu wywal ten błąd.-->
+              <input type="hidden" id="remove_key" name="remove_key" value=""/>
+              <input type="hidden" id="remove_element" name="remove_element" value=""/>
               <p><button class="btn btn-link-3 btn-light" name="save_step_changes" type="submit">{{ translatables.change }}</button></p>
             </form>
 
@@ -58,4 +73,5 @@
 {% endblock aside %}
 
 {% block scripts %}
+<script src="/static/assets/js/remove_elements.js"></script>
 {% endblock scripts %}
