--- a/crop_rotator/core/templates/core/rotator_admin.html
+++ b/crop_rotator/core/templates/core/rotator_admin.html
@@ -29,7 +29,7 @@
               <p>$ Czas cachowania (w sekundach) planu po ewaluacji (przeciwdziała bezmyślnemu klikaniu) : {{ form.evaluated_plan_cooldown }}</p>
               <p><button class="btn btn-link-3 btn-light" name="save_changes" type="submit">$Zapisz zmiany</button></p>
             </form>
-
+            <p><b><a href="{% url 'all_crops_admin' %}">$Zmień właściwości poszczególnych elementów</a></b></p>
         </div>
         </div>
       </div>
