Dodanie strony masowego tworzenia/niszczenia dowiązań tagów
Zrób to jednym kliknięciem!

--- a/crop_rotator/core/templates/core/rotator_admin.html
+++ b/crop_rotator/core/templates/core/rotator_admin.html
@@ -30,6 +30,7 @@
               <p><button class="btn btn-link-3 btn-light" name="save_changes" type="submit">$Zapisz zmiany</button></p>
             </form>
             <p><b><a href="{% url 'all_crops_admin' %}">$Zmień właściwości poszczególnych elementów</a></b></p>
+            <p><b><a href="{% url 'admin_db_superpowers' %}">$UWAGA: MASOWE DZIAŁNIA NA BAZIE DANYCH!!!</a></b></p>
         </div>
         </div>
       </div>
