populate meta tags  with csv button

--- a/crop_rotator/core/templates/core/admin_db_superpowers.html
+++ b/crop_rotator/core/templates/core/admin_db_superpowers.html
@@ -27,6 +27,7 @@
               <p>$Poczekaj cierpliwie aż skończy, bo to może trochę potrwać. ;)</p>
               <p><button class="btn btn-link-3 btn-light" name="populate_tag_db" type="submit">$Utwórz TAGI!</button></p>
               <p><button class="btn btn-link-3 btn-dark" name="purge_tag_db" type="submit">$Usuń TAGI!</button></p>
+              <p><button class="btn btn-link-3 btn-light" name="create_meta_tag_db" type="submit">$Utwórz meta TAGÓW!</button></p>
             </form>
         </div>
         </div>
