--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -44,16 +44,16 @@
     {% include 'strona/plan_parts/deep_properties.html' %}
   {% endif %}
 
-  <p><b><a href="{% url 'crop' crop.id %}">{{ crop.name }}</a></b><button class="show_properties2" value="2">Info</button></p>
+  {% if not crop.family.is_family_slave and crop.family.family_master == None %}<p><b><a href="{% url 'crop' crop.id %}">{{ crop.name }}</a>  </b><button class="show_properties2" value="2">Info</button></p>
   <div class="hidden_properties">
-    <p>{{ translatables.family }}: <a href="{% url 'family' crop.family.id %}">{% if crop.family.is_family_slave %} {{ crop.family.family_master }} {% else %}{{ crop.family }}{% endif %}</a></p>
+  <p>{{ translatables.family }}: <a href="{% url 'family' crop.family.id %}">{% if crop.family.is_family_slave %} {{ crop.family.family_master }} {% else %}{{ crop.family }}{% endif %}</a></p>
     {% if crop.descr %}
      <p>{{ translatables.notes }}: {{ crop.descr }}
     {% endif %}
     {% if crop.image %}
      <p><img src="{{ crop.image.url }}" alt="crop_image" height="auto" width="200"></img></p>
     {% endif %}
-  </div>
+  </div>{%endif%}
 </div>
 
 <!--Tutaj idą dodatkowe cechy plonu głównego w tym rzeczy typu onhover -->
