--- a/crop_rotator/strona/templates/strona/step.html
+++ b/crop_rotator/strona/templates/strona/step.html
@@ -28,20 +28,21 @@
               <p>{{ translatables.descr }}: {{ form.descr }}</p>
               <div class="col-md-12 plan-main">
               <h4>{{ translatables.early_crop }}:</h4>
-                {% for crop in step.early_crop.all %}
+                {% for crop in step.early_crop.all%}
+                {% if not crop.is_crop_mix %}
                 <p>{{ crop.name }}   <button class="btn btn-link-3 btn-light" remove_key="early" remove_element="{{ crop.id }}" name="remove_element_button">{{ translatables.remove_element }}</button></p>
+                {% endif %}
               {% endfor %}
               <div class="row master0" value="1782">
                 <div class="col-md-12" value="254">
                   <p class="slave0" value="test_slave0"><select class="selectables" name="crop_select">
                     <option value ="None" selected disabled>{{ translatables.option_select }}:</option>
                     {% for crop in croplist %}
-                      {% if crop not in step.early_crop.all %}
+                      {% if crop not in step.early_crop.all and not crop.is_crop_mix %}
                       <option value="{{ crop.id }}">{{ crop.name }}</option>
                       {% endif %}
                     {% endfor %}
                   </select>
-
                     <button class="btn btn-link-3 btn-light" add_key="early"  name="add_element_button">{{ translatables.add_element }}</button></p>
                 </div>
               </div>
@@ -51,14 +52,16 @@
               <div class="col-md-12 plan-main">
                 <h4>{{ translatables.middle_crop }}:</h4>
                 {% for crop in step.middle_crop.all %}
+                {% if not crop.is_crop_mix %}
                 <p>{{ crop.name }}   <button class="btn btn-link-3 btn-light" remove_key="middle" remove_element="{{ crop.id }}" name="remove_element_button">{{ translatables.remove_element }}</button></p>
+                {% endif %}
               {% endfor %}
               <div class="row master0" value="1782">
                 <div class="col-md-12" value="254">
                   <p class="slave0" value="test_slave0"><select class="selectables" name="crop_select">
                     <option value ="None" selected disabled>{{ translatables.option_select }}:</option>
                     {% for crop in croplist %}
-                      {% if crop not in step.middle_crop.all %}
+                      {% if crop not in step.middle_crop.all and not crop.is_crop_mix %}
                       <option value="{{ crop.id }}">{{ crop.name }}</option>
                       {% endif %}
                     {% endfor %}
@@ -72,14 +75,16 @@
               <div class="col-md-12 plan-main">
                 <h4>{{ translatables.late_crop }}:</h4>
                 {% for crop in step.late_crop.all %}
+                {% if not crop.is_crop_mix %}
                 <p>{{ crop.name }}   <button class="btn btn-link-3 btn-light" remove_key="late" remove_element="{{ crop.id }}" name="remove_element_button">{{ translatables.remove_element }}</button></p>
+                {% endif %}
               {% endfor %}
               <div class="row master0" value="1782">
                 <div class="col-md-12" value="254">
                   <p class="slave0" value="test_slave0"><select class="selectables" name="crop_select">
                     <option value ="None" selected disabled>{{ translatables.option_select }}:</option>
                     {% for crop in croplist %}
-                      {% if crop not in step.late_crop.all %}
+                      {% if crop not in step.late_crop.all and not crop.is_crop_mix %}
                       <option value="{{ crop.id }}">{{ crop.name }}</option>
                       {% endif %}
                     {% endfor %}
